# goldpy

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: conf.py  examples.md  selection.md
docs/_build/html/: .buildinfo  api.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  readthedocs.html  search.html  searchindex.js  selection.html  usage.html
docs/_build/html/.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  readthedocs.doctree  selection.doctree  usage.doctree
docs/_build/html/.doctrees/api/: cli.doctree  client.doctree  index.doctree  models.doctree  package.doctree  service.doctree
docs/_build/html/_sources/: api.md.txt  examples.md.txt  index.md.txt  readthedocs.md.txt  usage.md.txt
docs/_build/html/_sources/api/: cli.md.txt  client.md.txt  index.md.txt  models.md.txt  package.md.txt  service.md.txt
docs/_build/html/api/: cli.html  client.html  index.html  models.html  package.html  service.html
docs/snippets/: price-default.txt  price-json-prime.json  price-list-options.json
src/goldpy/: __init__.py  cli.py  client.py  models.py  service.py
tests/: conftest.py  test_cli.py  test_client.py  test_docs_examples.py  test_models.py  test_service.py
