[project]
name = "goldpy"
version = "0.1.0"
description = "A small CLI for checking Swissquote gold prices from the terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "eivl" },
]
keywords = ["cli", "gold", "metals", "swissquote", "typer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial",
  "Topic :: Utilities",
  "Typing :: Typed",
]
urls = { Homepage = "https://github.com/eivl/goldpy", Repository = "https://github.com/eivl/goldpy", Issues = "https://github.com/eivl/goldpy/issues" }
dependencies = [
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "typer>=0.16.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.10.0,<8.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[project.scripts]
goldpy = "goldpy.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goldpy"]

[tool.coverage.run]
branch = true
source = ["goldpy"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "coverage[toml]>=7.10.0,<8.0.0",
  "pytest>=8.4.0,<9.0.0",
]
